--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Django==4.2.1
 djangorestframework==3.14.0
 django-cors-headers==4.0.0
+Pillow==9.4.0
+gunicorn==20.1.0
+django-cors-headers
+psycopg2-binary==2.9.5
