removed api key from project

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ upstream secret_website_backend {
 server {
     listen 80;
     listen [::]:80;
-    server_name 46.41.137.226
+    server_name 46.41.137.226 localhost
 
     location / {
         root /usr/share/nginx/html;
