--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,25 +4,25 @@ upstream secret_website_backend {
 
 server {
     listen 80;
-    listen [::]:80;
-    server_name 46.41.137.226 localhost
 
-    location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
-    }
-
-    location /backend {
+    location /api/ {
         proxy_pass http://secret_website_backend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
         client_max_body_size 100M;
     }
+
     location /static/ {
         alias /home/app/web/staticfiles/;
     }
+
     location /media/ {
         alias /home/app/web/mediafiles/;
+    }
+
+    location / {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
     }
 }
