--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,7 @@ upstream secret_website_backend {
 
 server {
     listen 80;
+    server_name 46.41.149.244;
 
     location /api/ {
         proxy_pass http://secret_website_backend;
