--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -13,7 +13,8 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 # install dependencies
-RUN apt-get update && apt-get install certbot python3-certbot-nginx  -y
+RUN apk update \
+    && apk add postgresql-dev gcc python3-dev musl-dev
 
 # install dependencies
 RUN pip install --upgrade pip
