--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -3,7 +3,7 @@
 ###########
 
 # pull official base image
-FROM python:3.9.6 as builder
+FROM python:3.9.6-alpine as builder
 
 # set work directory
 WORKDIR /usr/src/app
