--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,6 +33,7 @@ services:
     volumes:
       - static_volume:/home/app/web/staticfiles
       - media_volume:/home/app/web/mediafiles
+      - ./nginx/:/etc/nginx/conf.d
     ports:
       - 80:80
     depends_on:
