--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,8 @@ upstream secret_website_backend {
 
 server {
     listen 80;
-    server_name 46.41.149.244;
+    listen [::]:80;
+    server_name localhost 127.0.0.1 46.41.149.244;
 
     location /api/ {
         proxy_pass http://secret_website_backend;
