--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ upstream secret_website_backend {
 server {
     listen 80;
     listen [::]:80;
-    server_name localhost 127.0.0.1 46.41.149.244;
+    server_name 46.41.149.244;
 
     location /api/ {
         proxy_pass http://secret_website_backend;
