--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -11,5 +11,5 @@ RUN npm run build
 FROM nginx:1.21-alpine
 
 RUN rm /etc/nginx/conf.d/default.conf
-COPY --from=builder /nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /secret_website_frontend/build /usr/share/nginx/html
