--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,9 +1,12 @@
 FROM node:16.3.0-alpine AS builder
 
 WORKDIR /secret_website_frontend
+
 COPY ./secret_website_frontend/package.json ./
 COPY ./secret_website_frontend/package-lock.json ./
+
 RUN npm install
+
 COPY ./secret_website_frontend/ ./
 RUN npm run build
 
@@ -11,5 +14,5 @@ RUN npm run build
 FROM nginx:1.21-alpine
 
 RUN rm /etc/nginx/conf.d/default.conf
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d
 COPY --from=builder /secret_website_frontend/build /usr/share/nginx/html
