--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ upstream secret_website_backend {
 server {
     listen 80;
     listen [::]:80;
-    server_name 46.41.149.244 default_server;
+    server_name localhost 127.0.0.1 46.41.149.244;
 
     location /api/ {
         proxy_pass http://secret_website_backend;
@@ -14,18 +14,14 @@ server {
         proxy_redirect off;
         client_max_body_size 100M;
     }
-
     location /static/ {
         alias /home/app/web/staticfiles/;
     }
-
     location /media/ {
         alias /home/app/web/mediafiles/;
     }
-
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
+      root /usr/share/nginx/html;
+      try_files $uri $uri/ /index.html;
     }
 }
