--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,6 +21,6 @@ server {
     }
     location / {
       root /usr/share/nginx/html;
-      try_files $uri $uri/ /index.html;
+      try_files $uri /index.html;
     }
 }
