--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16.3.0-alpine AS builder
+FROM node:alpine AS builder
 
 WORKDIR /secret_website_frontend
 
@@ -11,8 +11,8 @@ COPY ./secret_website_frontend/ ./
 RUN npm run build
 
 
-FROM nginx:1.21-alpine
+FROM nginx:alpine
 
+COPY --from=builder /secret_website_frontend/build /usr/share/nginx/html
 RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx.conf /etc/nginx/conf.d
-COPY --from=builder /secret_website_frontend/build /usr/share/nginx/html
