--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,6 +24,13 @@ server {
         proxy_redirect off;
         client_max_body_size 100M;
     }
+    location /api-auth-token/ {
+        proxy_pass http://secret_website_backend;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        client_max_body_size 100M;
+    }
     location /media/ {
         alias /home/app/web/mediafiles/;
     }
