--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,8 @@
 FROM node:alpine AS builder
 
+RUN apk update && apk add git
+run git clone https://github.com/kacperpy/secret_website_frontend.git .
+
 WORKDIR /secret_website_frontend
 
 COPY ./secret_website_frontend/package.json ./
